# orchestra

./: .env.example  .formatter.exs  .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  MUSICIAN.md  Makefile  README.md  mix.exs  package-lock.json  package.json  vitest.config.ts
.archgate/: rules.d.ts
.archgate/adrs/: ARCH-001-umbrella-project.md  ARCH-001-umbrella-project.rules.ts  ARCH-002-provider-agnostic.md  ARCH-002-provider-agnostic.rules.ts  ARCH-003-yaml-config-everywhere.md  ARCH-004-auth-centralization.md  ARCH-005-test-coverage-90.md  ARCH-006-skill-format-agentskills.md  ARCH-007-memory-taxonomy.md  ARCH-008-ratatouille-tui.md  (+14 more)
.omc/: prd.json  progress.txt
assets/: README.md
config/: config.exs
spec/: architecture.md  commands.md  decompilation.md  musician-architecture.md  musician-cli.md  musician-providers.md  musician-testing.md  state-management.md  tools.md
tests/: bundle-analysis.test.ts  decompiled-keywords.test.ts  decompiled-paths.test.ts  decompiled-utils.test.ts  decompiled-words.test.ts  sdk-types.test.ts  source-map-extraction.test.ts  src-array.test.ts  src-circular-buffer.test.ts  src-intl.test.ts  src-json-bun.test.ts  src-json-fs.test.ts  src-json.test.ts  src-keywords-timestamp.test.ts  src-memoize.test.ts  src-uuid.test.ts  src-xml.test.ts
tools/pipeline_runner/: Makefile  README.md  coverage.xml  pyproject.toml
tools/pipeline_runner/pipeline_runner/: __init__.py  __main__.py  cli.py  models.py  pipelines.py  runner.py
tools/pipeline_runner/tests/: conftest.py  test_cli.py  test_models.py  test_pipelines.py  test_runner.py
(+199 files in other folders)
