[tool.poetry]
name = "pipeline-runner"
version = "0.1.0"
description = "Pipeline runner for the claude-code reverse-engineering project"
authors = ["Redlex Gilgamesh <r3dtuxedo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pipeline_runner" }]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1"
rich = "^13.7"
pydantic = "^2.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"
ruff = "^0.4"
mypy = "^1.10"

[tool.poetry.scripts]
pipeline = "pipeline_runner.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N999"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pipeline_runner --cov-report=term-missing --cov-report=xml"

[tool.mypy]
python_version = "3.12"
strict = true
